--- a/클라우드 보안/1 클라우드 개요/2 클라우드 유형.md
+++ b/클라우드 보안/1 클라우드 개요/2 클라우드 유형.md
@@ -23,29 +23,44 @@
         - 퍼블릭 클라우드와 프라이빗 클라우드를 결합한 형태
         - 기업 또는 공공기관 등의 핵심 시스템은 프라이빗 클라우드에 두고, 비핵심 시스템은 퍼블릭 클라우드에 구축하여 이기종 클라우드를 동시에 활용하는 방식
 
-## 2. 서비스 모델에 따른 클라우드 유형## 2. 클라우드 유형
-- 클라우드는 크게 두 가지 관점으로 구분할 수 있다.
-    - 첫 번째는 자원이 어디에 위치하고, 클라우드 자원을 누가 사용할 수 있는지에 따른 **배치 모델** 유형이다.
-    - 두 번째는 클라우드를 통해 사용자에게 제공되는 서비스 수준이 단순히 하드웨어와 같은 인프라 자원을 사용하는 수준인지, 인프라 위에 설치되는 상위의 미들웨어 또는 소프트웨어 영역까지 포괄하는지에 따른 **서비스 모델** 유형이다.
-- 클라우드를 토대로 한 비지니스 시스템을 구축하거나 운영하기 위해 적합한 배치 모델과 서비스 모델을 환경에 맞게 선택해야 한다.
+## 2. 서비스 모델에 따른 클라우드 유형
+- 클라우드 환경에서 서비스 모델은 크게 **IaaS**, **PaaS**, **SaaS**의 3가지 서비스 유형으로 구분할 수 있다.
+- 물리적인 하드웨어를 대체하는 가상의 하드웨어부터 미들웨어, 소프트웨어, 애플리케이션 등, 상위 수준의 서비스 범위에서 어느 수준까지 사용자에게 서비스로 제공할 것인가에 따라 서비스 모델이 나누어진다.
+    1. **IaaS**
+        - IaaS는 인프라만 이용하는 서비스이다.
+        - 즉, 클라우드로 네트워크, 서버와 같은 자원을 이용하여 사용자 스스로 미들웨어, 소프트웨어 등을 설치해서 이용한다.
+        - 예) AWS의 EC2, EBS
+    2. **PaaS**
+        - PaaS는 클라우드의 미들웨어를 이용하여 소프트웨어 개발 환경을 구성할 수 있게 한다.
+        - 개발자는 서버나 스토리지, 데이터 백업 등을 신경 쓰지 않고 소스코드를 작성할 수 있어 개발하는 데 집중할 수 있다.
+        - 예) AWS의 RDS
+    3. **SaaS**
+        - SaaS는 클라우드에 구성된 소프트웨어를 이용하는 것이다.
+        - 사용자는 업무에 필요한 서비스를 찾아서 해당 소프트웨어를 필요한 만큼 이용하고 비용을 지불한다.
+        - 예) Microsoft 365
 
-### 2.1. 배치 모델에 따른 클라우드 유형
-- 클라우드 환경은 크게 누구나 접근할 수 있으며, 제약 없이 자원을 사용할 수 있는 환경과 허용된 사용자만 한정적으로 자원을 사용할 수 있는 환경으로 구분할 수 있다.
-- 즉, 클라우드 제공자가 소유한 자원에 누구나, 언제, 어디서든 접속 가능한 개방된 형태의 **퍼블릭 클라우드** 모델과, 개별적이고 독립적인 기업 또는 단체가 소유하는 자원을 허용된 사용자만 언제든지 사용할 수 있는 **프라이빗 클라우드** 모델이 존재한다.
-- 퍼블릭 클라우드와 프라이빗 클라우드를 결합하여, 상호 간의 클라우드에서 표준화된 인터페이스를 통해서 서비스를 제공하는 형태인 **하이브리드 클라우드** 모델도 존재한다.
-    1. **퍼블릭 클라우드**
-        - 클라우드 제공자가 하드웨어와 소프트웨어 및 기타 IT 자원을 소유한 형태
-        - 모든 사용자는 필요한 서비스를 언제나 이용할 수 있음
-        - 전 세계적으로 개방된 자원을 사용하기 때문에, 보안 수준이 상대적으로 저하
-        -글로벌 비즈니스가 가능하도록, 전 세계 주요 지역에 자원 구축 및 활용 가능한 상태
-        - 예) AWS, Azure, GCP 등
-    2. **프라이빗 클라우드**
-        - 기업 또는 공공기관 등이 자체 데이터센터 내에서 클라우드 컴퓨팅 환경을 구축
-        - 온프레미스와 퍼블릭 클라우드의 중간 형태
-        - 사용자를 한정할 수 있기 때문에 보안에 유리하며 회사의 보안 정책 적용이 용이
-        - 예) G-Cloud(정부 클라우드)
-    3. **하이브리드 클라우드**
-        - 퍼블릭 클라우드와 프라이빗 클라우드를 결합한 형태
-        - 기업 또는 공공기관 등의 핵심 시스템은 프라이빗 클라우드에 두고, 비핵심 시스템은 퍼블릭 클라우드에 구축하여 이기종 클라우드를 동시에 활용하는 방식
-
-### 2.2. 서비스 모델에 따른 클라우드 유형
+3. 클라우드 장단점
+- 클라우드 환경으로 시스템을 구축하여 운영하기 전에, 클라우드 서비스 활용에 존재하는 여러 영향을 고려해야 한다.
+    - 장점
+        - 비용과 시간 투자 측면, 자원의 효율적 활용과 생산성 측면에서 강점이 있다.
+        - 클라우드 서비스의 정량적 특징
+            1. **비용 절감**
+                - IT 자원을 다른 사용자들과 공류하고, 소유가 아니라 대여하여 사용하기 때문에 하드웨어/소프트웨어의 구매/유지 및 인건지, 유지보수 등의 비용이 절감
+            2. **완성형 서비스 활용으로 시간 절감**
+                - 플랫폼과 애플리케이션 자체를 즉시 사용 가능하므로, 자유롭고 빠른 개발 환경과 비즈니스 트렌드의 변화 속도에 맞춰 신속하게 대응 가능
+        - 클라우드 서비스의 정성적 특징
+            1. **생산성 향상**
+                - 안터넷만 되면, 언제 어디서나 스마트폰 등의 다양한 단말기를 통해 업무가 가능하므로 생산성 향상과 스마트 워크의 실현
+            2. **자원의 유연성**
+                - IT 자원의 수요 변화에 신속하고 탄력적으로 대응할 수 있어 필요한 만큼 IT 자원을 활용하는 것이 가능
+    - 단점
+        - 클라우드에는 가상화를 활용하여 보안 측면에서 주의해야 할 부분과 클라우드 서비스 제공자가 책임지는 영역에 대한 블랙박스 문제가 존재한다.
+            1. **가상화 인프라 취약성**
+                - 가상화 기술을 통해 클라우드 사용자들의 개별 가상서버들이 상호 연결되어 다양한 공격 경로가 발생할 수 있으며, 가상서버와 하이퍼바이저로의 해킹 시도, DDoS 공격, 악성코드 전파 등이 상대적으로 쉬움
+            2. **자원 공유로 인한 취약성**
+                - 동일 호스트상에 타인의 정보가 혼재되어 비인가자의 정보 접근 가능성이 큼
+            3. **자원 집중화로 인한 취약성**
+                - 예기치 않게 클라우드의 특정 리전에서 장애가 발생하면, 이용자 서비스 연쇄 중단과 대규모 피해 발생 가능
+            4. **장애 발생에 대한 블랙박스 문제**
+                - 클라우드 환경 자체에 장애나 이슈가 발생할 경우에는 클라우드 사용자가 직접적으로 문제를 해결하거나 조치할 수 없고, 클라우드 제공업체의 피드백을 기다리는 수동적인 입장이 된다.
+                - 따라서, 클라우드 제공업체 측에서는 '책임공유모델'이라는 개념을 언급하며, 사용자에게 장애 발생의 대응책을 항상 준비하고 구축할 것을 제안함
