--- a/클라우드 보안/1 클라우드 개요/2 클라우드 유형.md
+++ b/클라우드 보안/1 클라우드 개요/2 클라우드 유형.md
@@ -39,7 +39,7 @@
         - 사용자는 업무에 필요한 서비스를 찾아서 해당 소프트웨어를 필요한 만큼 이용하고 비용을 지불한다.
         - 예) Microsoft 365
 
-3. 클라우드 장단점
+## 3. 클라우드 장단점
 - 클라우드 환경으로 시스템을 구축하여 운영하기 전에, 클라우드 서비스 활용에 존재하는 여러 영향을 고려해야 한다.
     - 장점
         - 비용과 시간 투자 측면, 자원의 효율적 활용과 생산성 측면에서 강점이 있다.
