공통 보안 서비스

--- a/3 클라우드 보안 서비스/1 공통 보안 서비스.md
+++ b/3 클라우드 보안 서비스/1 공통 보안 서비스.md
@@ -1,1 +1,37 @@
 # 공통 보안 서비스
+- 클라우드는 자원 사용을 위한 최초 단계부터  자원이 삭제되는 마지막 단계까지의 라이프사이클을 위한 시각화 서비스가 다양하게 제공된다.
+- 클라우드는 모든 장소와 사람, 디바이스에 개방되어 있으므로, 클라우드 전체 라이프사이클에서 공통으로 이용할 수 있는 기본적인 보안 서비스를 우선적으로 고려해야 한다.
+
+## 1. 클라우드 관리 포털(CMP) 보안
+- 클라우드 환경에서 제공되는 모든 자원을 관리하기 위해서 **클라우드 관리 포털(CMP)**이 제공된다.
+  - 사용자는 클라우드 관리 포털을 통해 자원의 상태, 변경을 위한 전체 라이프사이클을 관리하게 된다.
+- 클라우드 관리 포털을 통해서 임의의 자원이 생성되었는지, 중요한 자원이 삭제되었는지 등의 모든 자원 현황을 가시화할 수 있다.
+  - 즉, 클라우드 서비스를 활용하는 중심에 클라우드 관리 포털이 존재하므로, 포털에 접근할 수 있는 사용자와 업무별 역할에 따라 권한 정책을 적용하여 보안성을 확보해야 한다.
+
+### 1.1. 계정 및 접근 권한 관리(IAM)
+- 인가된 사용자에게만 허용 가능한 자원에 작업을 수행하도록 권한을 부여해야 한다.
+- AWS 클라우드 환경에서는 계정에 대한 서비스를 IAM이라는 이름으로 제공하고, API와 라이브러리를 통해 자동으로 권한 관리할 수 있도록 제공한다.
+
+### 1.2. 다중 요소 인증
+- 클라우드 서비스에서는 **지식 기반 인증 방식**과 **소유 기반의 랜덤한 토근 방식** 등을 추가하여 **혼합형 인증 방식 모델**을 제공하고 있다.
+- AWS 환경에서의 다중 요소 인증 방식은 MFA라는 이름으로 서비스가 제공되고 있다.
+
+## 2. 로깅과 모니터링
+- 일반적인 보안 관점에서 미래에 발생할 보안 위협을 예상하기 어렵기 때문에 과거 또는 현재에 발생하는 보안 위협 분석을 통해 대응하는 것에 초점이 맞춰져 있다.
+  - 즉, 현재 수행되는 상황의 로그를 실시간으로 남기고 빠르게 특이 사항을 감지하는 모니터링 수행이 보안 대응에 있어서 중요하다.
+  - 로깅의 유형은 개별 자원에서 기본적으로 제공되는 접속 로그와 변경된 작업 이력에 대한 행위 로그, 감사 로그가 있고 사용자 정의 로그 등의 상세화된 로그까지 확대 적용하여 보안 수준을 높일 수 있다.
+- AWS에서 로그 설정과 모니터링을 담당하는 주요 서비스는 클라우드와치이다.
+
+## 3. 골드환경(사용자 정의 환경)
+- 클라우드 환경에서 필요한 자원을 활용할 때 사용자는 최초 자원의 사양과 환경값을 입력하여 생성하는 것부터 시작한다.
+- 일반적인 정보 시스템 환경을 구성하려면 웹, 애플리케이션, 데이터베이스 자원을 생성할 때마다 각각의 보안 요소를 설정한다.
+- 개별 자원을 대상으로 보안 요소를 수동으로 각기 다르게 적용하는 일이 반복되면서 누락되거나, 불필요한 작업을 수행하는 일들이 벌어질 수 있다.
+  - 구축한 시스템의 보안성 수준이 저하되는 결과를 만들게 된다.
+- 이를 방지하기 위해, 적용해야 할 보안 서비스와 필수 라이브러리 등이 포함된 기본적인 클라우드 자원을 사전에 구축하는 것이 필요하다.
+  - 사전에 구축한 기본 자원 이미지 또는 사용자 정의된 자원 생성 스크립트를 활용하는 것이다.
+- 사전에 보안 설정을 적용하여 직접 구축한 이미지 또는 생성 스크립트를 일명 **'골드환경'** 또는 **'골드이미지'**라 부른다.
+- AWS에서 골드환경을 구성할 수 있는 서비스는 AMI이다.
+
+## 4. 마켓 플레이스 활용
+- 클라우드 서비스 제공자는 외부에서 개발한 솔루션을 적극적으로 받아들이고, 사용자가 사용할 수 있도록 마켓 플레이스를 운용하고 있다.
+- 필요한 보안 솔루션이나 모니터링, 위협 탐지 서비스 등을 선택하면 사용자의 클라우드 환경에 자동으로 설정되어 사용만 하면 된다.
